--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,28 @@ body {
     text-wrap: balance;
   }
 }
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 16rem; /* 100% of the viewport width */
+  height: 20rem; /* 100% of the viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader::after {
+  content: '';
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  border: 8px solid lightblue;
+  border-right-color: orange;
+  animation: l2 1s infinite linear;
+}
+
+@keyframes l2 {
+  to {
+    transform: rotate(1turn);
+  }
+}
